# persona-subspace

./: .gitignore  .gitmodules  CLAUDE.md  README.md  download_hf_data.py  pyproject.toml  requirements.txt  run_all.sh  run_persona_analysis.py  setup.sh
sae_feature_analysis/: 1_personal.ipynb  3_analyze_features_personal_general.ipynb  3_personal_general.ipynb  3_personal_general_optimized.ipynb  4_analyze_features_personal_general_combined.ipynb  4_diffing.ipynb  4_diffing.py  4_diffing_claude.py  4_diffing_o3.py  4_diffing_patch.diff  5_diffing_comp.ipynb  5_diffing_personal.ipynb  6_active_prompts.ipynb  6_active_prompts_claude.ipynb  7_steering.ipynb  7_steering.py  7_steering_coeffs.py  8_active_tokens.py  CLAUDE.md  README.md  analyze_features.ipynb  analyze_features_general.ipynb  analyze_features_universal.ipynb  assistant_prompts.jsonl  autointerp.py  control_prompts.jsonl  entity_behavior_semantic_autointerp.py  examine_mean_activations.py  pyproject.toml  run_autointerp.py  run_entity_behavior_semantic_analysis.py  run_universal_analysis.py  test_prompt_generation.py  universal_features_lib.py
sae_feature_analysis/bad_scripts/: run_sae_analysis.py  sae_feature_analysis.py
sae_feature_analysis/explanations/: gemma_trainer131k-l0-114_layer20.csv  llama_trainer32x_layer11.csv  llama_trainer32x_layer13.csv  llama_trainer32x_layer15.csv  llama_trainer32x_layer17.csv  llama_trainer32x_layer19.csv
sae_feature_analysis/features/: ai_introspective_diff.csv  coding_help.csv  medical_help.csv  model_homonyms.csv  role_transition.csv  top_mean_diff.csv  transitions.csv  you_pronouns.csv
sae_feature_analysis/notebooks/: 1_personal.ipynb  1_personal_goodfire.ipynb  2_universal.ipynb  3_personal_general_optimized.ipynb  4_diffing.ipynb  4_diffing.py  4_diffing_tasks.ipynb  5_diffing_comp.ipynb
(+9353 files in other folders)
