[project]
name = "persona-subspace"
version = "0.1.0"
description = "Exploring persona subspaces in model internals through SAE analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=2.21.0",
    "h5py>=3.14.0",
    "huggingface-hub>=0.33.1",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "pandas>=2.3.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers>=4.52.4",
    "plotly>=5.0.0",
    "circuitsvis>=1.0.0",
    "matplotlib>=3.0.0",
    "scikit-learn>=1.0.0",
    "fire>=0.4.0",
    "accelerate>=0.20.0",
    "einops>=0.8.1",
    "bitsandbytes>=0.46.1",
    "vllm>=0.6.0",
    "anthropic>=0.60.0",
    "google-generativeai>=0.8.5",
    "simple-parsing>=0.1.7",
    "jsonlines>=4.0.0",
    "python-dotenv>=1.1.1",
]
