[project]
name = "reproduction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=2.21.0",
    "dictionary-learning>=0.1.0",
    "h5py>=3.14.0",
    "huggingface-hub>=0.33.1",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "pandas==2.2.3",
    "sae-lens>=6.0.0rc2",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers==4.50.3",
    "plotly>=5.0.0",
    "circuitsvis>=1.0.0",
    "matplotlib>=3.0.0",
    "scikit-learn>=1.0.0",
    "fire>=0.4.0",
    "accelerate>=0.20.0",
    "einops>=0.8.1",
    "openai==1.70.0",
    "google-generativeai==0.8.4",
    "anthropic==0.49.0",
    "librosa>=0.11.0",
    "google-cloud-aiplatform>=1.101.0",
    "opencv-python>=4.11.0.86",
    "jsonlines>=4.0.0",
    "redis>=6.2.0",
    "grayswan-api>=0.1.0a49",
    "pydub>=0.25.1",
    "together>=1.5.17",
    "bitsandbytes>=0.46.1",
]

